          suite covered everything it should have).
        Fix some badly-formatted POD documentation which accidentally included
          some code
        Fix uninitialized warnings in feed tests
        Fix database setup to ignore tables that aren't Wiki::Toolkit tables
        Fix test suite's incorrect passing of DBIxFTSMySQL connection
          parameters

0.74    9  June 2007
        Added list_last_version_before method, to get the version of all the
         nodes at a given point in time
        Updated version on Text::WikiFormat dependency to avoid long-standing
         test failure with old version
        Bump version number of Wiki::Toolkit::Plugin as this was not done
         the last time it was changed (for CPAN.pm compatibility)

0.73    12 December 2006
        Added parse_feed_timestamp method
        Added encoding parameter to the Feed methods, to allow overriding
          the store's encoding.

0.72    15 September 2006
        Install wiki-toolkit-rename-node

0.71    30 August 2006
        More feed code refactoring, to allow "mini" feeds with just
          name, and optionally distance and location. Typically used in
          search results, especially with Wiki::Toolkit::Plugin::Locator's
        Ability to filter by nodes without certain metadata, by type
          or type+value ("everything without a longitude" or 
          "everything not category=Pub")
        Fix bug in Listing.pm pod output

0.70    6 June 2006
        Feed code has been refactored.
        Check that the database schema is up-to-date when initializing the
          store and abort otherwise.
        In PostgresSQL setup code, delete orphaned content/metadata rows.
        When we bulk delete and insert data for an upgrade, check to make
          sure we can create the tables and indexes before dropping the old
          tables.
        Other miscellaneous fixes.

0.69_03 13 May 2006