@@ -12,6 +12,8 @@
         Fix database setup to ignore tables that aren't Wiki::Toolkit tables
         Fix test suite's incorrect passing of DBIxFTSMySQL connection
           parameters
+        Add missing prereq of DBI (caught by the CPAN testers) and don't
+          use DBI in Makefile.PL
 
 0.74    9  June 2007
         Added list_last_version_before method, to get the version of all the
